--- a/app/src/main/res/layout/activity_sign_up_form.xml
+++ b/app/src/main/res/layout/activity_sign_up_form.xml
@@ -95,10 +95,10 @@
                 android:layout_gravity="center"
                 android:layout_marginStart="@dimen/_15sdp"
                 android:textColor="@color/white"
-                android:inputType="numberPassword"
                 android:layout_marginEnd="@dimen/_15sdp"
                 android:background="@drawable/edtitext_bg"
                 android:hint="Password"
+                android:inputType="textPassword"
                 android:layout_marginTop="@dimen/_15sdp"
                 android:padding="@dimen/_2sdp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -116,7 +116,8 @@
                 android:layout_marginEnd="@dimen/_15sdp"
                 android:background="@drawable/edtitext_bg"
                 android:hint="Password"
-                android:inputType="numberPassword"
+                android:inputType="textPassword"
+
                 android:padding="@dimen/_2sdp"
                 android:textColor="@color/white"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -150,6 +151,7 @@
                 android:background="@drawable/edtitext_bg"
                 android:hint="Phone no"
                 android:padding="@dimen/_2sdp"
+                android:inputType="number"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/num"></EditText>
@@ -300,13 +302,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/email_et"></android.widget.Button>
 
 
-          <!--  <Button
-                android:id="@+id/get_opt_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Get OPT"
-                app:layout_constraintStart_toStartOf="@+id/phone_num_et"
-                app:layout_constraintTop_toBottomOf="@+id/otp_et" />-->
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
