--- a/app/src/main/res/layout/fragment_show_farm.xml
+++ b/app/src/main/res/layout/fragment_show_farm.xml
@@ -30,7 +30,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/coverphoto" />
 
-
+    <Button
+        android:id="@+id/chats"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="chats"
+        app:layout_constraintEnd_toEndOf="@+id/Yourorder"
+        app:layout_constraintStart_toStartOf="@+id/Yourorder"
+        app:layout_constraintTop_toBottomOf="@+id/Yourorder" />
     <Button
         android:id="@+id/Yourorder"
         android:layout_width="wrap_content"
